# deep-learning

./: .gitignore  README.md  pyproject.toml
day01/: 01_tensor_base.py
day02/: 01_tensor_to_numpy.py  02_base_operation.py  03_indexing.py  04_shape_operations.py
day03/: 01_autograd.py  02_regression.py
day04/: 01_init_weights.py  02_create_neural_network.py
day05/: 01_ANN_phone_price_classify.py  02_ANN_phone_price_classify_optimal.py
day06/: 01_image.py  02_conv.py  03_pool.py
day07/: 01_CNN_graph_classify.py  02_CNN_graph_classify_optimal.py  03_embedding.py  04_rnn.py  05_rnn_lyrics.py
exercises/: 00_pytorch_foundation.ipynb
